--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!-- Write your code below -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+ </head>
+ <body>
+    <h1>The Best Movies According To Deepak</h1>
+    <h2>My top 3 movies of all-time.</h2>
+    <hr>
+    <h3>Iron Man </h3>
+    <p>When Tony Stark, an industrialist, he constructed a high-tech armoured suit to escape.</p>
+    <h3>Thor</h3>
+    <p>Thor is exiled by his father,Odin , the king of Asgard, to the Earth to live among mortals.</p>
+    <h3>Guardians of the Galaxy</h3>
+    <p>A bunch of skilled criminals led by brash adventurer Peter Quill join hands to fight a villain named Ronan the Accuser who wants to control the universe with the help of a mystical orb.</p>
+</body>
+ </html>
